exports[`test renders correctly 1`] = `
<div
  className=""
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "display": "inline-block",
    }
  }>
  <span>
    ArticleTitle 
    {\"title\":\"An Article\",\"timestamp\":\"2016-11-12\",\"url\":\"http://example.com\"}
  </span>
  <span>
    ArticleBody 
    {\"body\":\"article body\"}
  </span>
</div>
`;

exports[`test renders correctly 2`] = `
<div
  className="has-mouse-over"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "display": "inline-block",
    }
  }>
  <span>
    ArticleTitle 
    {\"title\":\"An Article\",\"timestamp\":\"2016-11-12\",\"url\":\"http://example.com\"}
  </span>
  <span>
    ArticleBody 
    {\"body\":\"article body\"}
  </span>
</div>
`;

exports[`test renders correctly 3`] = `
<div
  className=""
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "display": "inline-block",
    }
  }>
  <span>
    ArticleTitle 
    {\"title\":\"An Article\",\"timestamp\":\"2016-11-12\",\"url\":\"http://example.com\"}
  </span>
  <span>
    ArticleBody 
    {\"body\":\"article body\"}
  </span>
</div>
`;
